--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -66,7 +66,7 @@ steps:
           version: 0.1.0
           
           environment:
-            sdk: '>=3.4.0-0 <4.0.0'
+            sdk: ^3.0.0
           
           dependencies:
             flutter:
