--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -55,7 +55,7 @@ steps:
           }
       - name: Add dependencies
         path: forge2d_game
-        flutter: pub add characters flame flame_forge2d xml
+        flutter: pub add characters flame flame_forge2d flame_kenney_xml xml
       - name: Patch pubspec.yaml
         path: forge2d_game/pubspec.yaml
         patch: |
@@ -11722,9 +11722,8 @@ steps:
           import 'package:flame/components.dart';
           import 'package:flame/extensions.dart';
           import 'package:flame_forge2d/flame_forge2d.dart';
+          import 'package:flame_kenney_xml/flame_kenney_xml.dart';
           import 'package:flutter/services.dart';
-          import 'package:xml/xml.dart';
-          import 'package:xml/xpath.dart';
 
           import 'background.dart';
 
@@ -11741,51 +11740,29 @@ steps:
 
             @override
             FutureOr<void> onLoad() async {
-              final [backgroundImage, aliensImage, elementsImage, tilesImage] = await [
-                images.load('colored_grass.png'),
-                images.load('spritesheet_aliens.png'),
-                images.load('spritesheet_elements.png'),
-                images.load('spritesheet_tiles.png'),
-              ].wait;
-              aliens = XmlSpriteSheet(aliensImage,
-                  await rootBundle.loadString('assets/spritesheet_aliens.xml'));
-              elements = XmlSpriteSheet(elementsImage,
-                  await rootBundle.loadString('assets/spritesheet_elements.xml'));
-              tiles = XmlSpriteSheet(tilesImage,
-                  await rootBundle.loadString('assets/spritesheet_tiles.xml'));
+              final backgroundImage = await images.load('colored_grass.png');
+              final spriteSheets = await Future.wait([
+                XmlSpriteSheet.load(
+                  imagePath: 'spritesheet_aliens.png',
+                  xmlPath: 'spritesheet_aliens.xml',
+                ),
+                XmlSpriteSheet.load(
+                  imagePath: 'spritesheet_elements.png',
+                  xmlPath: 'spritesheet_elements.xml',
+                ),
+                XmlSpriteSheet.load(
+                  imagePath: 'spritesheet_tiles.png',
+                  xmlPath: 'spritesheet_tiles.xml',
+                ),
+              ]);
+
+              aliens = spriteSheets[0];
+              elements = spriteSheets[1];
+              tiles = spriteSheets[2];
 
               await world.add(Background(sprite: Sprite(backgroundImage)));
 
               return super.onLoad();
-            }
-          }
-
-          class XmlSpriteSheet {
-            XmlSpriteSheet(this.image, String xml) {
-              final document = XmlDocument.parse(xml);
-              for (final node in document.xpath('//TextureAtlas/SubTexture')) {
-                final name = node.getAttribute('name')!;
-                final x = double.parse(node.getAttribute('x')!);
-                final y = double.parse(node.getAttribute('y')!);
-                final width = double.parse(node.getAttribute('width')!);
-                final height = double.parse(node.getAttribute('height')!);
-                _rects[name] = Rect.fromLTWH(x, y, width, height);
-              }
-            }
-
-            final ui.Image image;
-            final _rects = <String, Rect>{};
-
-            Sprite getSprite(String name) {
-              final rect = _rects[name];
-              if (rect == null) {
-                throw ArgumentError('Sprite $name not found');
-              }
-              return Sprite(
-                image,
-                srcPosition: rect.topLeft.toVector2(),
-                srcSize: rect.size.toVector2(),
-              );
             }
           }
       - name: Patch lib/main.dart
@@ -11861,8 +11838,7 @@ steps:
         patch: |
           --- b/forge2d_game/step_04/lib/components/game.dart
           +++ a/forge2d_game/step_04/lib/components/game.dart
-          @@ -13,6 +13,7 @@ import 'package:xml/xml.dart';
-           import 'package:xml/xpath.dart';
+          @@ -13,5 +13,6 @@ import 'package:flame_kenney_xml/flame_kenney_xml.dart';
            
            import 'background.dart';
           +import 'ground.dart';
@@ -11870,7 +11846,7 @@ steps:
            class MyPhysicsGame extends Forge2DGame {
              MyPhysicsGame()
           @@ -41,9 +42,22 @@ class MyPhysicsGame extends Forge2DGame {
-                   await rootBundle.loadString('assets/spritesheet_tiles.xml'));
+               tiles = spriteSheets[2];
            
                await world.add(Background(sprite: Sprite(backgroundImage)));
           +    await addGround();
@@ -11890,8 +11866,6 @@ steps:
           +    ]);
           +  }
            }
-           
-           class XmlSpriteSheet {
       - name: Build web app
         path: forge2d_game
         flutter: build web
@@ -12058,6 +12032,7 @@ steps:
             final ui.Size size;
 
             const BrickSize(this.size);
+
             static BrickSize get randomSize => values[Random().nextInt(values.length)];
           }
 
@@ -12334,8 +12309,7 @@ steps:
            import 'dart:ui' as ui;
            
            import 'package:flame/components.dart';
-          @@ -13,6 +14,7 @@ import 'package:xml/xml.dart';
-           import 'package:xml/xpath.dart';
+          @@ -13,5 +14,6 @@ import 'package:flame_kenney_xml/flame_kenney_xml.dart';
            
            import 'background.dart';
           +import 'brick.dart';
@@ -12382,8 +12356,6 @@ steps:
           +    }
           +  }
            }
-           
-           class XmlSpriteSheet {
       - name: Build web app
         path: forge2d_game
         flutter: build web
@@ -12468,7 +12440,7 @@ steps:
             }
 
             @override
-            update(double dt) {
+            void update(double dt) {
               super.update(dt);
 
               if (!body.isAwake) {
@@ -12578,7 +12550,7 @@ steps:
           +      );
           +
           +  @override
-          +  update(dt) {
+          +  void update(double dt) {
           +    super.update(dt);
           +    if (isMounted && world.children.whereType<Player>().isEmpty) {
           +      addPlayer();
@@ -12768,7 +12740,7 @@ steps:
             }
 
             @override
-            update(double dt) {
+            void update(double dt) {
               super.update(dt);
 
               if (position.x > camera.visibleWorldRect.right + 10 ||
@@ -12785,16 +12757,14 @@ steps:
       - name: Patch lib/components/game.dart
         path: forge2d_game/lib/components/game.dart
         patch: |
-          --- b/forge2d_game/step_07/lib/components/game.dart
-          +++ a/forge2d_game/step_07/lib/components/game.dart
-          @@ -9,12 +9,14 @@ import 'dart:ui' as ui;
-           import 'package:flame/components.dart';
+          --- forge2d_game/step_06/lib/components/game.dart       2024-06-25 01:33:36.366379062 +0200
+          +++ forge2d_game/step_07/lib/components/game.dart       2024-06-25 01:43:51.820430259 +0200
+          @@ -10,10 +10,12 @@
            import 'package:flame/extensions.dart';
            import 'package:flame_forge2d/flame_forge2d.dart';
+           import 'package:flame_kenney_xml/flame_kenney_xml.dart';
           +import 'package:flutter/material.dart';
            import 'package:flutter/services.dart';
-           import 'package:xml/xml.dart';
-           import 'package:xml/xpath.dart';
            
            import 'background.dart';
            import 'brick.dart';
@@ -12802,7 +12772,7 @@ steps:
            import 'ground.dart';
            import 'player.dart';
            
-          @@ -46,7 +48,7 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -52,7 +54,7 @@
            
                await world.add(Background(sprite: Sprite(backgroundImage)));
                await addGround();
@@ -12811,9 +12781,9 @@ steps:
                await addPlayer();
            
                return super.onLoad();
-          @@ -101,9 +103,50 @@ class MyPhysicsGame extends Forge2DGame {
+          @@ -107,8 +109,49 @@
              @override
-             update(dt) {
+             void update(double dt) {
                super.update(dt);
           -    if (isMounted && world.children.whereType<Player>().isEmpty) {
           +    if (isMounted &&
