--- a/adaptive_app/codelab_rebuild.yaml
+++ b/adaptive_app/codelab_rebuild.yaml
@@ -1386,7 +1386,8 @@ steps:
               _googleSignIn.onCurrentUserChanged.listen((account) {
                 if (account != null) {
                   _googleSignIn.authenticatedClient().then((authClient) {
-                    if (authClient != null) {
+                    final context = this.context;
+                    if (authClient != null && context.mounted) {
                       context.read<AuthedUserPlaylists>().authClient = authClient;
                       context.go('/');
                     }
@@ -1433,8 +1434,11 @@ steps:
                   _authUrl = Uri.parse(url);
                 });
               }).then((authClient) {
-                context.read<AuthedUserPlaylists>().authClient = authClient;
-                context.go('/');
+                final context = this.context;
+                if (context.mounted) {
+                  context.read<AuthedUserPlaylists>().authClient = authClient;
+                  context.go('/');
+                }
               });
             }
           
