--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -22,7 +22,7 @@ steps:
           version: 0.1.0
           
           environment:
-            sdk: '>=3.3.0 <4.0.0'
+            sdk: ^3.5.0-0
           
           dependencies:
             flame: ^1.16.0
