--- a/google-maps-in-flutter/codelab_rebuild.yaml
+++ b/google-maps-in-flutter/codelab_rebuild.yaml
@@ -52,19 +52,19 @@ steps:
         patch-u: |
           --- b/google-maps-in-flutter/step_3/android/app/build.gradle
           +++ a/google-maps-in-flutter/step_3/android/app/build.gradle
-          @@ -36,9 +36,9 @@ android {
+          @@ -22,9 +22,9 @@ android {
                defaultConfig {
                    // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
                    applicationId = "com.example.google_maps_in_flutter"
           -        // You can update the following values to match your application needs.
-          -        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+          -        // For more information, see: https://flutter.dev/to/review-gradle-config.
           -        minSdk = flutter.minSdkVersion
           +        // Minimum Android version for Google Maps SDK
           +        // https://developers.google.com/maps/flutter-package/config#android
           +        minSdk = 21
                    targetSdk = flutter.targetSdkVersion
-                   versionCode = flutterVersionCode.toInteger()
-                   versionName = flutterVersionName
+                   versionCode = flutter.versionCode
+                   versionName = flutter.versionName
       - name: Patch ios/Podfile
         platforms: [ macos ]
         path: google_maps_in_flutter/ios/Podfile
@@ -182,7 +182,7 @@ steps:
            import UIKit
           +import GoogleMaps
            
-           @UIApplicationMain
+           @main
            @objc class AppDelegate: FlutterAppDelegate {
           @@ -8,6 +9,10 @@ import UIKit
                didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?
@@ -1421,7 +1421,7 @@ steps:
           @@ -93,3 +93,5 @@ flutter:
              #
              # For details regarding fonts from package dependencies,
-             # see https://flutter.dev/custom-fonts/#from-packages
+             # see https://flutter.dev/to/font-from-package
           +  assets:
           +    - assets/locations.json
       - name: flutter doctor
