--- a/firebase-auth-flutterfire-ui/start/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/start/pubspec.yaml
@@ -1,4 +1,4 @@
-name: complete
+name: start
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -7,8 +7,8 @@ environment:
   sdk: '>=3.4.0-0 <4.0.0'
 
 dependencies:
-  firebase_auth: ^4.19.4
-  firebase_core: ^2.30.1
+  firebase_auth: ^5.1.3
+  firebase_core: ^3.3.0
   firebase_ui_auth: ^1.14.0
   firebase_ui_oauth_google: ^1.3.2
   flutter:
@@ -23,4 +23,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/
+    - assets/
