--- a/testing_codelab/step_04/pubspec.yaml
+++ b/testing_codelab/step_04/pubspec.yaml
@@ -8,19 +8,19 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.0-0 <4.0.0'
+  sdk: ^3.5.0-323.1.beta
 
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^14.0.2
+  go_router: ^14.2.1
   provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  test: ^1.25.2
+  flutter_lints: ^4.0.0
+  test: ^1.25.7
   flutter_driver:
     sdk: flutter
   integration_test:
