--- a/webview_flutter/codelab_rebuild.yaml
+++ b/webview_flutter/codelab_rebuild.yaml
@@ -47,15 +47,15 @@ steps:
         patch-u: |
           --- b/webview_flutter/step_03/android/app/build.gradle
           +++ a/webview_flutter/step_03/android/app/build.gradle
-          @@ -38,7 +38,7 @@ android {
+          @@ -24,7 +24,7 @@ android {
                    applicationId = "com.example.webview_in_flutter"
                    // You can update the following values to match your application needs.
-                   // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+                   // For more information, see: https://flutter.dev/to/review-gradle-config.
           -        minSdk = flutter.minSdkVersion
           +        minSdk = 20
                    targetSdk = flutter.targetSdkVersion
-                   versionCode = flutterVersionCode.toInteger()
-                   versionName = flutterVersionName
+                   versionCode = flutter.versionCode
+                   versionName = flutter.versionName
       - name: Build iOS
         platforms: [ macos ]
         path: webview_in_flutter
