--- a/firebase-auth-flutterfire-ui/start/macos/Podfile
+++ b/firebase-auth-flutterfire-ui/start/macos/Podfile
@@ -1,3 +1,4 @@
+# Native Firebase plugins require MacOS 10.15 minimum, Flutter only requires 10.14
 platform :osx, '10.15'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
